flex-wrap removed

--- a/form/style.css
+++ b/form/style.css
@@ -58,7 +58,7 @@ section.sidebar {
 .input-text {
     /* border: 1px solid red; */
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     width: 817px;
     justify-content: start;
     align-items: center;
@@ -95,7 +95,7 @@ section.sidebar {
 .input-number {
     /* border: 1px solid green; */
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     width: 506px;
     justify-content: start;
     align-items: center;
@@ -131,7 +131,7 @@ section.sidebar {
 .note-text {
     /* border: 1px solid blue; */
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     width: 817px;
     justify-content: start;
     align-items: center;
@@ -288,12 +288,7 @@ section.sidebar {
     align-items: center;
     left: 3px;
 }
-.section2{
-    flex-wrap: wrap;
-}
-.section3{
-    flex-wrap: wrap;
-}
+
 
 .toggle::after {
     content: '';
